--- a/doc/07-Appendix.tex
+++ b/doc/07-Appendix.tex
@@ -66,7 +66,7 @@ and endpoint at $(w-1,0,0)$.
 
 Because we want to avoid adding unnecessary notches, we are forced split in the $w$ axis.
 We commit to always splitting the $w$ axis in two.
-If we want to subdivide into three cuboid regions, we also need to pick the split point in the other dimensionin another dimension
+If we want to subdivide into three cuboid regions, we also need to pick the split point in the other dimension another dimension
 
 \subsection{$w >> h \sim d$}
 
