--- a/doc/AUTHOR.tex
+++ b/doc/AUTHOR.tex
@@ -1,3 +1,3 @@
-\author[1]{Jakub \v{C}erven\'{y}}[ url=https://github.com/jakubcerveny ]
-\author[2]{Zzyv Zzyzek}[ orcid=0009-0005-2175-1166, url=https://zzyzek.github.io/ ]
+\author{Jakub \v{C}erven\'{y}}[url=https://github.com/jakubcerveny]
+\author{Zzyv Zzyzek}[url=https://zzyzek.github.io,orcid=0009-0005-2175-1166]
 
